welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:9: error: not found: value nbBiscuit
  if (nbBiscuit<3){
      ^Poucet:12: error: not found: value nbBiscuit
  if (nbBiscuit>=3){
      ^