welcome.lessons.welcome.loopdowhile.Poucet2.scala.code
var nbPas=0
do {
  for (nbPas <- 1 to 5) {
    var nbBiscuit=0
    avance()
    if (estSurBiscuit()==true){
      nbBiscuit=nbBiscuit+1
    }}
  if (nbBiscuit<3){
  droite()
  }
  if (nbBiscuit>=3){
  gauche()
  }
} while (crossing()==true)  
  
  